iac/week-2/demo-app/k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        # image: dockersamples/examplevotingapp_vote
        image: dockerkeystone/vote:v1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m        # 超卖 - burstable
            memory: 1000Mi    #
        ports:
        - containerPort: 80
          name: vote
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 1
